--- a/Shared/AdminView.razor
+++ b/Shared/AdminView.razor
@@ -1,9 +1,11 @@
 ﻿@page "/AdminView"
+@using Osiris.Data
 @inherits LayoutComponentBase
+@inject UserLoginData _UserLoginData
 
 <div class="page">
     <div class="sidebar">
-        <AdminNavMenu />
+        <AdminNavMenu UserRole="admin" UserId="@userId" />
     </div>
     <div class="main">
         <div class="content px-4">
@@ -13,5 +15,9 @@
 </div>
 
 @code {
-
+    private String userId;
+    protected override async Task OnInitializedAsync()
+    {
+        userId = _UserLoginData.RetrievedUserId;
+    }
 }
