--- a/Shared/CollabNavMenu.razor
+++ b/Shared/CollabNavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="user">
+            <NavLink class="nav-link" href=@($"user/{UserRole}/?id={UserId}")>
                 <span class="oi oi-person" style="color: #fff" aria-hidden="true"></span> User
             </NavLink>
         </li>
@@ -26,6 +26,11 @@
 </div>
 
 @code {
+    [Parameter]
+    public String UserRole { get; set; }
+    [Parameter]
+    public String UserId { get; set; }
+
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
