--- a/Pages/Projects/ProjectView.razor
+++ b/Pages/Projects/ProjectView.razor
@@ -1,11 +1,9 @@
-﻿@page "/project/project-view/{ProjectId}/"
+﻿@page "/projects/{UserRole}/{UserId}/project-view/{ProjectId}/"
 @using Osiris.Data
 @inject ProjectService projectService
 @inject TicketService ticketService
-@inject UserService userService;
+@inject UserService userService
 @inject NavigationManager NavigationManager
-
-@inject IJSRuntime JS
 
 @if (isLoaded.Equals(false))
 {
@@ -14,9 +12,12 @@
 else
 {
     <h3>Project @projectObject.Name</h3>
-    <button type="button" class="btn-remove" @onclick="() => OnOpenProjectDeleteDialog()">Delete</button>
-    <button type="button" class="btn-outlined" @onclick="() => OnOpenProjectEditDialog()">Edit</button>
-    <a class="btn-outlined" href="/project/project-view/@projectObject.ProjectId/section-board">Section</a>
+    @if (UserRole.Equals("admin"))
+    {
+        <button type="button" class="btn-remove" @onclick="() => OnOpenProjectDeleteDialog()">Delete</button>
+        <button type="button" class="btn-outlined" @onclick="() => OnOpenProjectEditDialog()">Edit</button>
+    }
+    <a class="btn-outlined mx-3" href="/projects/@UserRole/project-view/@projectObject.ProjectId/section-board">Section</a>
     <p>@projectObject.Description</p>
     <p>@projectObject.ProjectId</p>
 
@@ -60,12 +61,15 @@ else
     List<Ticket> ticketListObj;
     List<User> userListObj;
 
-
     User userObject = new User();
     Project projectObject = new Project();
 
     [Parameter]
     public String ProjectId { get; set; }
+    [Parameter]
+    public String UserRole { get; set; }
+    [Parameter]
+    public String UserId { get; set; }
 
     Boolean isLoaded = false;
 
