--- a/Pages/Projects/ProjectsIndex.razor
+++ b/Pages/Projects/ProjectsIndex.razor
@@ -1,7 +1,8 @@
-﻿@page "/projects"
+﻿@page "/projects/{UserRole}/{UserId}"
 @using Osiris.Data
 @inject ProjectService projectService
 @inject CompanyService companyService
+@inject UserService userService
 @inject NavigationManager NavigationManager
 
 <div class="container mb-4 pl-0">
@@ -9,10 +10,12 @@
         <div class="col-6">
             <h3>Projects</h3>
         </div>
-        <hr />
-        <div class="col-5">
-            <button class="button btn-main" @onclick="() => OnOpenProjectAddDialog()">Create Project</button>
-        </div>
+        @if (UserRole.Equals("admin"))
+        {
+            <div class="col-5">
+                <button class="button btn-main" @onclick="() => OnOpenProjectAddDialog()">Create Project</button>
+            </div>
+        }
     </div>
 </div>
 
@@ -27,36 +30,75 @@ else
             <div class="div-center-container row">
                 @foreach (var project in projectListObj)
                 {
-                    <div class="osiris-project-card m-2" @onclick="() => NaviagateToProject(project.ProjectId)">
-                        <div class="text-capitalize mb-3" style="font-weight: 700; font-size: 20px">@project.Name</div>
-                        @if (project.Status.Equals("Complete"))
-                        {
-                            <div class="mr-2" style="display: inline">Complete</div>
-                            <div class="oi oi-circle-check" style="color: #16C79A; font-size: 20px; display: inline"></div>
-                        }
-                        else
-                        {
-                            <div class="mr-2" style="display: inline">Incomplete</div>
-                            <div class="sx oi oi-circle-check" style="display: inline; font-size: 20px;"></div>
-                        }
-                        @if (companyListObj is null)
-                        {
-                            <LoadingSpinner />
-                        }
-                        else
-                        {
-                            foreach (var company in companyListObj)
+                    if (UserRole.Equals("admin"))
+                    {
+                        <div class="osiris-project-card m-2" @onclick="() => NaviagateToProject(project.ProjectId)">
+                            <div class="text-capitalize mb-3" style="font-weight: 700; font-size: 20px">@project.Name</div>
+                            @if (project.Status.Equals("Complete"))
                             {
-                                @if (company.CompanyId.Equals(project.CompanyId))
+                                <div class="mr-2" style="display: inline">Complete</div>
+                                <div class="oi oi-circle-check" style="color: #16C79A; font-size: 20px; display: inline"></div>
+                            }
+                            else
+                            {
+                                <div class="mr-2" style="display: inline">Incomplete</div>
+                                <div class="sx oi oi-circle-check" style="display: inline; font-size: 20px;"></div>
+                            }
+                            @if (companyListObj is null)
+                            {
+                                <LoadingSpinner />
+                            }
+                            else
+                            {
+                                foreach (var company in companyListObj)
                                 {
-                                    <div class="project-company-container mt-3 p-2">
-                                        <div class="mx-3 oi oi-briefcase" style="display: inline; color: #fff;"></div>
-                                        <div style="display: inline">@company.Name</div>
-                                    </div>
+                                    @if (company.CompanyId.Equals(project.CompanyId))
+                                    {
+                                        <div class="project-company-container mt-3 p-2">
+                                            <div class="mx-3 oi oi-briefcase" style="display: inline; color: #fff;"></div>
+                                            <div style="display: inline">@company.Name</div>
+                                        </div>
+                                    }
                                 }
                             }
+                        </div>
+                    }
+                    else if (UserRole.Equals("collaborator"))
+                    {
+                        @if (project.CompanyId.Equals(userObject.CompanyId))
+                        {
+                            <div class="osiris-project-card m-2" @onclick="() => NaviagateToProject(project.ProjectId)">
+                                <div class="text-capitalize mb-3" style="font-weight: 700; font-size: 20px">@project.Name</div>
+                                @if (project.Status.Equals("Complete"))
+                                {
+                                    <div class="mr-2" style="display: inline">Complete</div>
+                                    <div class="oi oi-circle-check" style="color: #16C79A; font-size: 20px; display: inline"></div>
+                                }
+                                else
+                                {
+                                    <div class="mr-2" style="display: inline">Incomplete</div>
+                                    <div class="sx oi oi-circle-check" style="display: inline; font-size: 20px;"></div>
+                                }
+                                @if (companyListObj is null)
+                                {
+                                    <LoadingSpinner />
+                                }
+                                else
+                                {
+                                    foreach (var company in companyListObj)
+                                    {
+                                        @if (company.CompanyId.Equals(project.CompanyId))
+                                        {
+                                            <div class="project-company-container mt-3 p-2">
+                                                <div class="mx-3 oi oi-briefcase" style="display: inline; color: #fff;"></div>
+                                                <div style="display: inline">@company.Name</div>
+                                            </div>
+                                        }
+                                    }
+                                }
+                            </div>
                         }
-                    </div>
+                    }
                 }
             </div>
         </div>
@@ -68,13 +110,20 @@ else
 }
 
 @code {
+    [Parameter]
+    public String UserRole { get; set; }
+    [Parameter]
+    public String UserId { get; set; }
+
     List<Project> projectListObj;
     List<Company> companyListObj;
+    User userObject = new User();
 
     private async Task loadData()
     {
         projectListObj = await Task.Run(() => projectService.GetAllProjectsAsync());
         companyListObj = await Task.Run(() => companyService.GetAllCompaniesAsync());
+        userObject = await Task.Run(() => userService.GetUserAsync(UserId));
         StateHasChanged();
     }
     protected override async Task OnInitializedAsync()
@@ -84,7 +133,7 @@ else
 
     private void NaviagateToProject(Guid projectId)
     {
-        NavigationManager.NavigateTo($"/project/project-view/{projectId}");
+        NavigationManager.NavigateTo($"/projects/{UserRole}/{UserId}/project-view/{projectId}");
     }
 
     /* Model Logic */
