--- a/Shared/CollabNavMenu.razor
+++ b/Shared/CollabNavMenu.razor
@@ -13,12 +13,12 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href=@($"user/{UserRole}/?id={UserId}")>
+            <NavLink class="nav-link" href=@($"user/{UserRole}/{UserId}")>
                 <span class="oi oi-person" style="color: #fff" aria-hidden="true"></span> User
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="projects">
+            <NavLink class="nav-link" href=@($"projects/{UserRole}/{UserId}")>
                 <span class="oi oi-folder" style="color: #fff" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
