--- a/Pages/Company/CompanyIndex.razor
+++ b/Pages/Company/CompanyIndex.razor
@@ -81,7 +81,7 @@ else
 
     private void NavigateToCompany(Guid companyId)
     {
-        NavigationManager.NavigateTo($"/company/company-view/{companyId}");
+        NavigationManager.NavigateTo($"/companies/company-view/{companyId}");
     }
 
     /* Modal Logic */
