--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/home"
+﻿@page "/logout"
 @inject NavigationManager NavigationManager
 
 <button class="btn btn-main" @onclick="() => Logout(typeof(MainLayout))">Logout</button>
