--- a/Shared/AdminNavMenu.razor
+++ b/Shared/AdminNavMenu.razor
@@ -8,11 +8,6 @@
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column text-uppercase">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/home" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
             <NavLink class="nav-link" href=@($"user/{UserRole}/{UserId}")>
                 <span class="oi oi-person" style="color: #fff" aria-hidden="true"></span> User
             </NavLink>
@@ -30,6 +25,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="report">
                 <span class="oi oi-document" style="color: #fff" aria-hidden="true"></span> Report
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/logout" Match="NavLinkMatch.All">
+                <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
             </NavLink>
         </li>
     </ul>
