--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -422,6 +422,22 @@ tr:not(:first-child):hover {
     white-space: nowrap;
 }
 
+.company-users-card {
+    background-color: #0F0E17;
+    color: #fff;
+    border-radius: 8px;
+    padding: 25px;
+    height: 50vh;
+    overflow-y: scroll;
+}
+
+.company-users-secondary-card {
+    background-color: #000;
+    box-shadow: 0px 2px 2px 2px rgb(0 0 0 / 20%);
+    border-radius: 8px;
+    padding: 25px;
+}
+
 .osiris-prediction-card {
     background-color: #ffffff;
     border-radius: 8px;
